# ros_grasp

./: .gitignore  my_simulation_log.txt
src/fr5/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/fr5/config/: fr5_controllers.yaml
src/fr5/launch/: camera_launch.py  display_robot.launch.py  gazebo.launch.py  gazebo_sim.launch.py  move_attached_object_demo_ros2.py  move_cartesian_demo_ros2.py  move_circle_demo_ros2.py  move_continuous_demo_ros2.py  move_ik_demo_ros2.py  move_speed_demo_ros2.py  move_test_ros2.py  vision_simulation.launch.py
src/fr5/meshes/collision/: base_link.STL  link2.STL  link3.STL  link4.STL
src/fr5/meshes/visual/: link1.STL  link5.STL  link6.STL
src/fr5/scripts/: grasping_demo.py  mimic_fixer.py  monitor.py  random_target.py  scene_setup.py  simple_vision.py
src/fr5/urdf/: camera.xacro  fr5.urdf  fr5.urdf.xacro  gripper.xacro  simple_gripper.xacro
src/fr5/worlds/: vision_task.world
src/image_processor/: package.xml  setup.py
src/image_processor/image_processor/: image_converter_node.py  vision_manager_node.py
src/robot_fr5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_fr5_moveit_config/config/: fr5.ros2_control.xacro  fr5.srdf  fr5.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  simple_gripper.xacro
src/robot_fr5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/trac_ik-ros2_plugin/trac_ik_kinematics/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
